--- a/app.json
+++ b/app.json
@@ -17,53 +17,5 @@
     "repository": "https://github.com/Snowball-0/SigmaRenameBot",
     "success_url": "",
     "stack": "container",
-    "env": {
-      "API_ID": {
-        "description": "Your APP ID From my.telegram.org ",
-        "value": "",
-        "required": true
-      },
-  
-      "API_HASH": {
-        "description": "Your API Hash From my.telegram.org ",
-        "value": "",
-        "required": true
-      },
-  
-      "BOT_TOKEN": {
-        "description": "Your Bot Token From @BotFather",
-        "value": "",
-        "required": true
-      },
-  
-      "FORCE_SUB": {
-        "description": "Your force sub channel user name without [@] ",
-        "value": "",
-        "required": true
-      },
-  
-      "ADMIN": {
-        "description": "Add Your User ID multiple is use space to split",
-        "value": "",
-        "required": true
-      },
-  
-      "LOG_CHANNEL": {
-        "description": "Bot Log Sending Channel (just create a private channel and add bot to admin and take channel id to add this variable) ⚠️ id startswith -100 must",
-        "value": "",
-        "required": true
-      },
-  
-      "DB_URL": {
-        "description": "Your Mongo DB URL Obtained From mongodb.com",
-        "value": "",
-        "required": true
-      },
-  
-      "DB_NAME": {
-        "description": "Your Mongo DB Cluster Name",
-        "value": "",
-        "required": true
-      }
-    }
+    "env": {}
   }
